--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
@@ -164,7 +165,7 @@
   
     <footer class="footer light">
         <div class="container">
-            <span class="copyright">© 2020 Nasim Mahmud.</span>
+            <span class="copyright">© 2020 Habibullah.</span>
         </div>
     </footer>
 	
