--- a/templates/blog_category.html
+++ b/templates/blog_category.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Nasim - Portfolio/CV/Resume</title>
+	<title>Habibullah - Portfolio/CV/Resume</title>
 	<meta name="description" content="Bolby - Portfolio/CV/Resume HTML Template">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
@@ -16,7 +17,7 @@
 	<link rel="stylesheet" href="/static/css/slick.css" type="text/css" media="all">
 	<link rel="stylesheet" href="/static/css/animate.css" type="text/css" media="all">
 	<link rel="stylesheet" href="/static/css/magnific-popup.css" type="text/css" media="all">
-	<link rel="stylesheet" href="/static/css/style.css" type="text/css" media="all">
+	<link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all">
 
 	
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -82,10 +83,10 @@
  
  
  
- .navbar-toggler-icon{
+.navbar-toggler-icon{
 	 background-color:#FFD15C!important;
 	 border-radius:4px!important;
- }
+}
 
   
 </style>
@@ -205,7 +206,7 @@
     
     <footer class="footer light">
         <div class="container">
-            <span class="copyright">© 2020 Nasim Mahmud.</span>
+            <span class="copyright">© 2020 Habibullah.</span>
         </div>
     </footer>
 	
