--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Nasim - Portfolio/CV/Resume</title>
+	<title>Habibullah - Portfolio/CV/Resume</title>
 	<meta name="description" content="Bolby - Portfolio/CV/Resume HTML Template">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
