--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,12 @@
 				<img src="/static/images/myphoto.jpg" width="120px" height="120px" style="border-radius:50%" alt="Nasim" class="mb-4" />
 
 				<!-- info -->
-				<h1 class="mb-2 mt-0">Nasim Mahmud</h1>
+				<h1 class="mb-2 mt-0">Habibullah</h1>
 				<span>I'm a <span class="text-rotating">Full-Stack Engineer, Python(django) developer, Writter</span></span>
 
 				<!-- social icons -->
 				<ul class="social-icons light list-inline mb-0 mt-4">
-					<li class="list-inline-item"><a href="https://www.facebook.com/Nasim.Nimu2011"><i class="icofont-facebook"></i></i></a></li>
+					<li class="list-inline-item"><a href="https://www.facebook.com/www.habibullah.us"><i class="icofont-facebook"></i></i></a></li>
 					<li class="list-inline-item"><a href="https://www.github.com/Nasim-NIMU/"><i class="icofont-github"></i></i></a></li>
 					
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/nasim-nimu"><i class="icofont-linkedin"></i></i></a></li>
@@ -100,7 +100,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<!-- about text -->
-								<p>I am Nasim Mahmud, web developer from Dhaka, Bangladesh. I have rich experience in dynamic web applications building and customization, I am good at Django(Python).</p>
+								<p>I am Habibullah, web developer from Dhaka, Bangladesh. I have rich experience in dynamic web applications building and customization, I am good at Django(Python).</p>
 								<div class="mt-3">
 									<a href="#" class="btn btn-default">Download CV</a>
 								</div>
@@ -423,12 +423,15 @@
 
 	</section>
 	
-	<!-- section prices
+	
+
+
+
 	<section id="prices">
 
 		<div class="container">
 			
-			 section title 
+			  
 			<h2 class="section-title wow fadeIn">Pricing Plans</h2>
 
 			<div class="spacer" data-height="60"></div>
@@ -436,7 +439,7 @@
 			<div class="row">
 				
 				<div class="col-md-4 pr-md-0 mt-md-4 mt-0">
-					<!-- price item 
+					 price item 
 					<div class="price-item bg-white rounded shadow-dark text-center">
 						<img src="/static/images/price-1.svg" alt="Regular" />
 						<h2 class="plan">Basic</h2>
@@ -448,7 +451,7 @@
 				</div>
 
 				<div class="col-md-4 px-md-0 my-4 my-md-0">
-					<!-- price item recommended
+					 price item recommended
 					<div class="price-item bg-white rounded shadow-dark text-center best">
 						<span class="badge">Recommended</span>
 						<img src="/static/images/price-2.svg" alt="Premium" />
@@ -461,7 +464,7 @@
 				</div>
 
 				<div class="col-md-4 pl-md-0 mt-md-4 mt-0">
-					<!-- price item 
+					price item 
 					<div class="price-item bg-white rounded shadow-dark text-center">
 						<img src="/static/images/price-3.svg" alt="Ultimate" />
 						<h2 class="plan">Ultimate</h2>
@@ -607,7 +610,7 @@
 				
 				<div>
             
-        </div>
+                 </div>
 				<div class="col-md-4 " style="margin-top:10px">
 					<!-- blog item -->
 					<div class="blog-item rounded bg-white shadow-dark wow fadeIn">
