--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,9 @@
 				<!-- social icons -->
 				<ul class="social-icons light list-inline mb-0 mt-4">
 					<li class="list-inline-item"><a href="https://www.facebook.com/www.habibullah.us"><i class="icofont-facebook"></i></i></a></li>
-					<li class="list-inline-item"><a href="https://www.github.com/Nasim-NIMU/"><i class="icofont-github"></i></i></a></li>
+					<li class="list-inline-item"><a href="https://github.com/HabibsCoders"><i class="icofont-github"></i></i></a></li>
 					
-                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/nasim-nimu"><i class="icofont-linkedin"></i></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/habibullah101/"><i class="icofont-linkedin"></i></i></a></li>
 					
 					
 				</ul>
