--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
 					<div class="text-center text-md-left">
 						<!-- avatar image -->
 						<div class="card-body">
-						    <img src="/static/images/myphoto.jpg" width="160px" height="160px" style="border-radius:50%" alt="Nasim" class="mb-4" />
+						    <img src="/static/images/myphoto.jpg" width="160px" height="160px" style="border-radius:50%" alt="Habibullah" class="mb-4" />
 					    </div>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
