--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="description" content="Nasim - Portfolio/CV/Resume Django Application">
+	<meta property="description" content="Habibullah-01581127669-mdhabibullahkhan7@gmail.com -Portfolio/CV/Resume Django Application">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta property="og:image" content="/static/images/portfolio.png" />
 		
