--- a/static/css/style.css
+++ b/static/css/style.css
@@ -764,7 +764,7 @@ header.mobile-header-2 .site-logo img {
   }
 }
 .desktop-header-3.light {
-  background: #F9F9FF;
+  background: #33ff00;
   border-bottom: solid 1px rgba(0, 0, 0, 0.05);
 }
 .desktop-header-3.light .navbar-dark .navbar-nav .nav-link {
@@ -834,7 +834,7 @@ section.home .social-icons li a {
   color: #FFF;
 }
 section.home.light {
-  background: #F9F9FF;
+  background: #ffcb6c;
 }
 section.home.light .intro h1 {
   color: #353353;
